fix ie and flexLayout issues

--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -1,17 +1,17 @@
 .appWrapper
   min-height: 100vh
 
-.header
-  background-image: url("/assets/images/EM-background.jpg")
-  background-size: cover
-  background-repeat: no-repeat
-  background-position: center bottom
+  app-header
+    min-height: 210px //for IE flexLayout compatibility
+    // background-color: gold
 
-.main
-  background-color: yellow
+  app-main
+    min-height: 400px //for IE flexLayout compatibility
+    background-color: yellow
 
-.footer
-  background-image: url("/assets/images/EM-footer-background.jpg")
-  background-size: cover
-  background-repeat: no-repeat
-  background-position: center center
+  app-footer
+    background-color: #dad512
+    // background-image: url("/assets/images/EM-footer-background.jpg")
+    // background-size: cover
+    // background-repeat: no-repeat
+    // background-position: center center
