--- a/src/app/header/header.component.sass
+++ b/src/app/header/header.component.sass
@@ -1,6 +1,15 @@
-mat-toolbar
-  background-color: rgba(200, 200, 200, 0.3)
-  a
-    font-family: 'Play', sans-serif
-    font-size: 0.7em
-    // font-weight: 700
+.headerWrap
+  // background-color: pink
+  min-height: 210px //for IE flexLayout compatibility
+  background-image: url("/assets/images/EM-background.jpg")
+  background-size: cover
+  background-repeat: no-repeat
+  background-position: center bottom
+
+  mat-toolbar
+    height: 38px
+    background-color: rgba(200, 200, 200, 0.3)
+    a
+      font-family: 'Play', sans-serif
+      font-size: 0.7em
+      // font-weight: 700
